deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsh
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dsh
  ports:
    - name: http
      port: 4080
      targetPort: http
      protocol: TCP
